crates/biome_js_type_info/tests/snapshots/infer_flattened_type_from_chained_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise().then(() => {});

```

## Result

```
instanceof Promise
```

## Registered types

```
Thin TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}

Thin TypeId(1) => instanceof Promise<number>

Thin TypeId(2) => Promise.prototype.then

Thin TypeId(3) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: void
}

Global TypeId(0) => instanceof Promise<number>

Global TypeId(1) => instanceof Promise<number>
```
