crates/biome_js_type_info/tests/snapshots/infer_flattened_type_from_direct_promise_instance.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
new Promise((resolve) => resolve("value"));

```

## Result

```
instanceof Promise
```

## Registered types

```
Global TypeId(0) => value: value

Global TypeId(1) => Call unresolved reference "resolve" (scope ID: 0)(Global TypeId(0))

Global TypeId(2) => sync Function {
  accepts: {
    params: [
      required resolve: unknown reference
    ]
    type_args: []
  }
  returns: Global TypeId(1)
}
```
