crates/biome_js_type_info/tests/snapshots/infer_flattened_type_of_destructured_array_element.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const [a]: Array<string> = [];

```

## Result

```
a => string?

```

## Registered types

```
Global TypeId(0) => instanceof Array<string>

Global TypeId(1) => string?

Global TypeId(2) => instanceof Array<string>

Global TypeId(3) => string?
```
