crates/biome_js_type_info/tests/snapshots/infer_type_of_array_element.snap
---
source: crates/biome_js_type_info/tests/utils/mod.rs
expression: content
---
```ts
const array: Array<string> = [];

```

```
array => "Array" {
  params: unknown
  type_args: string
}

```
